--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -9,6 +9,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="GameComponents">
+      <UniqueIdentifier>{cc2767fb-3174-49a2-9e2b-770e51977603}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -17,10 +20,16 @@
     <ClCompile Include="ThisGame.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="GameComponents\EnemyComponent.cpp">
+      <Filter>GameComponents</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThisGame.h">
       <Filter>Sources</Filter>
+    </ClInclude>
+    <ClInclude Include="GameComponents\EnemyComponent.h">
+      <Filter>GameComponents</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -28,6 +37,9 @@
       <Filter>Resources</Filter>
     </Text>
     <Text Include="..\Build\Assets\Scenes\Prefabs.txt">
+      <Filter>Resources</Filter>
+    </Text>
+    <Text Include="..\Build\Assets\Scenes\TileMap.txt">
       <Filter>Resources</Filter>
     </Text>
   </ItemGroup>
